[project]
name = "restaurant-booking"
version = "0.1.0"
description = ""
authors = [
    {name = "Pertsev Sergey",email = "pertsev.sergey59@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
